# CourseWork

./: AppManager.h  CMakeLists.txt  MarkStatus.h  main.cpp
AppManager/: AppManager.cpp  AppManager.h
AssessmentSystem/: AssessmentSystem.cpp  AssessmentSystem.h
AssessmentSystem/FivePointSystem/: FivePointSystem.cpp  FivePointSystem.h
AssessmentSystem/PassFailSystem/: PassFailSystem.cpp  PassFailSystem.h
CalcGraphTask/: CalcGraphTask.cpp  CalcGraphTask.h
ComponentBase/: ComponentBase.cpp  ComponentBase.h
CourseProject/: CourseProject.cpp  CourseProject.h
Database/: Database.cpp  Database.h
DateAndAssessSys/: DateAndAssessSys.cpp  DateAndAssessSys.h
Department/: Department.cpp  Department.h
Discipline/: Discipline.cpp  Discipline.h  DisciplineConfig.h
Discipline/DisciplinesOf2Course/: DisciplineOf2Course.cpp  DisciplinesOf2Course.h  DiscsOfGroup2Course.h
Discipline/DisciplinesOf2Course/DiscsOfGroup2Course/: DiscsOfGroup2Course.cpp  DiscsOfGroup2Course.h
Exam/: Exam.cpp  Exam.h
Group/: Group.cpp  Group.h
Institute/: Institute.cpp  Institute.h
LaboratoryWorks/: LaboratoryWorks.cpp  LaboratoryWorks.h
MarkAndAssessSys/: MarkAndAssessSys.cpp  MarkAndAssessSys.h
Student/: Student.cpp  Student.h
Test/: Test.cpp  Test.h
University/: University.cpp  University.h
